crates/engram-cli/tests/cli/snapshot/snapshots/cli__snapshot__env__daemon_status_not_running__plain.snap
---
source: crates/engram-cli/tests/cli/snapshot/env.rs
expression: f.run(& all)
---
$ engramdb --no-maintenance --dir [PROJECT] --format plain daemon status
exit: 0
--- stdout ---
Daemon: not running (socket [RUNTIME]/d.sock)
It is auto-spawned on demand by the next MCP run when [daemon] is enabled.
--- stderr ---
